[tool.poetry]
name = "ctogov-rag"
version = "0.1.0"
description = "Retrieval Augmented Generation (RAG) system to query and analyse Clinical Trial (CT) protocols from clinicaltrials.gov (ct.gov) using Large Language Models (LLMs)"
authors = ["JPonsa <joan.ponsa.cobas@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
llama-index = "^0.10.20"
dspy-ai = {extras = ["neo4j"], version = "^2.4.0"}
pandas = "^2.2.1"
ollama = "^0.1.7"
tqdm = "^4.66.2"
sqlalchemy = "^2.0.28"
torch = "^2.2.1" # trial2vec needs downgrade
# torch = "2.2.0" 
transformers = "^4.38.2" # trial2vec needs downgrade
# transformers = "4.30.2" 
# Trial2Vec = "^0.1.0"
llama-index-llms-ollama = "^0.1.2"
llama-index-embeddings-huggingface = "0.1.4" # There is a bug with 0.1.5 #11939
llama-index-graph-stores-neo4j = "^0.1.3"
langchain = "^0.1.13"
sentence-transformers = "^2.6.1"
psycopg2 = "^2.9.9"
langsmith = "^0.1.33"
llama-index-vector-stores-neo4jvector = "^0.1.3"
gpt4all = "^2.3.2" # local embeddings for vector search
chromadb = "^0.4.24" # local vector db


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"
black = "^24.3.0"
isort = "^5.13.2"
# biocypher = "^0.5.40" - Commented so I can install llama-index-graph-stores-neo4j 
pymongo = "^4.6.2"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
