[tool.poetry]
name = "ctgov-rag"
version = "0.1.0"
description = "Retrieval Augmented Generation (RAG) system to query and analyse Clinical Trial (CT) protocols from clinicaltrials.gov (ct.gov) using Large Language Models (LLMs)"
authors = ["JPonsa <joan.ponsa.cobas@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
#python = "^3.11"
python = ">=3.11,<3.12"
llama-index = "^0.10.20"
pandas = "^2.2.1"
ollama = "^0.1.7"
tqdm = "^4.66.2"
sqlalchemy = "^2.0.28"
torch = "^2.1.2" 
transformers = {extras = ["torch"], version = "^4.39.3"} # trial2vec needs downgrade
llama-index-llms-ollama = "^0.1.2"
llama-index-embeddings-huggingface = "0.1.4" # There is a bug with 0.1.5 #11939
llama-index-graph-stores-neo4j = "^0.1.3"
langchain = "^0.1.14"
sentence-transformers = "^2.6.1"
langsmith = "^0.1.33"
llama-index-vector-stores-neo4jvector = "^0.1.3"
chromadb = "^0.4.24" # local vector db
trial2vec = {git = "https://github.com/JPonsa/Trial2Vec.git"}
onnxruntime = "1.16.3"
langchain-experimental = "^0.0.56"
openinference-instrumentation-dspy = "0.1.6"
opentelemetry-sdk = "1.23.0"
arize-phoenix = "3.18.1"
llama-index-llms-huggingface = "^0.1.4"
bitsandbytes = "^0.42.0"
psycopg2-binary = "^2.9.9"
dspy = {git = "https://github.com/stanfordnlp/dspy.git"}
vllm = "^0.4.0.post1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"
black = "^24.3.0"
isort = "^5.13.2"
# biocypher = "^0.5.40" - Commented so I can install llama-index-graph-stores-neo4j 
pymongo = "^4.6.2"
python-dotenv = "^1.0.1"
ragas = "^0.1.6"
motor = "^3.4.0"
python-devtools = "^2"
numpy = "^1.26.4"

[build-system]
#requires = ["poetry-core"]
requires = ["poetry-core", "setuptools", "wheel", "cython"]
build-backend = "poetry.core.masonry.api"
